# tree-gen

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  conanfile.py  version.py
.github/actions/cpp-tests/: action.yaml  actions.yaml
.github/workflows/: test.yml
cmake/: generate_tree.cmake
conan/profiles/: debug  release  tests-debug  tests-debug-clang-linux-x64  tests-debug-gcc-linux-x64  tests-release  tests-release-clang-linux-x64  tests-release-gcc-linux-x64
doc/: .gitignore  Doxyfile  README.md  main-page.dox  rebuild.sh  requirements.txt
doc/source/: conf.py  index.rst  tree-gen.gen.md
doc/source/_templates/: layout.html
examples/: CMakeLists.txt  utils.hpp
examples/directory/: CMakeLists.txt  README.md  directory.tree  main.cpp  main.py  primitives.py
examples/interpreter/: CMakeLists.txt  README.md  main.cpp  primitives.hpp  program.tree  value.tree
examples/simple/: CMakeLists.txt  directory.tree  main.cpp  primitives.hpp
generator/: format_utils.cpp  format_utils.hpp  lexer.l  parser.y  tree-gen-cpp.cpp  tree-gen-cpp.hpp  tree-gen-python.cpp  tree-gen-python.hpp  tree-gen.cpp  tree-gen.hpp
include/: tree-annotatable.cpp.inc  tree-annotatable.hpp  tree-annotatable.hpp.inc  tree-base.cpp.inc  tree-base.hpp  tree-base.hpp.inc  tree-cbor.cpp.inc  tree-cbor.hpp  tree-cbor.hpp.inc  tree-compat.hpp  tree-compat.hpp.inc  tree-default-config.hpp.inc  tree-undef.hpp.inc  version.hpp
src/: parser.y  tree-annotatable.cpp  tree-base.cpp  tree-cbor.cpp  tree-gen.cpp  tree-gen.hpp  version.cpp
test/: CMakeLists.txt  main.cpp  test_annotatable.cpp  test_cbor.cpp  test_format_utils.cpp
tests/: CMakeLists.txt  assert.hpp  test-annotatable.cpp  test-cbor.cpp  test_cbor.cpp
